[package]
name = "root-task"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"
resolver = "2"

[dependencies]
sel-claw = { path = "/home/chunky/Devel/sel-claw" }
selfe-arc = { path = "/home/chunky/Devel/sel-claw/selfe-arc", default-features = false, features = [] }
ferros = { path = "../../.." }
typenum = "1.10"
xmas-elf = "0.7"

hello-printer = { path = "../hello-printer" }

[build-dependencies]
ferros-build = { path = "../../../ferros-build" }
